# cdv

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  auth.py  blog.py  db.py
instance/: cdv.sqlite
