[tool.poetry]
name = "cdv"
version = "0.1.0"
description = "curlin data visualizer"
authors = ["Jacob Curlin <jtcurlin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
